# multi-matching-optimization

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE-3RD-PARTY.txt  README.md  main.cpp  meson.build  meson.options  pyproject.toml  test.cpp
.github/workflows/: build_wheels.yml  build_wheels_release.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/pages/: API.rst  quickstart.rst
doc/source/pages/_autosummary/: pylibmgm.io.rst  pylibmgm.rst  pylibmgm.solver.rst
doc/source/pages/api/: io.rst  pylibmgm.rst  solver.rst
doc/source/pages/api/_autosummary/io/: pylibmgm.io.export_dd_file.rst  pylibmgm.io.import_solution.rst  pylibmgm.io.parse_dd_file.rst  pylibmgm.io.parse_dd_file_gm.rst
doc/source/pages/api/_autosummary/pylibmgm/: pylibmgm.CostMap.rst  pylibmgm.GMLocalSearcher.rst  pylibmgm.GMLocalSearcherParallel.rst  pylibmgm.GmModel.rst  pylibmgm.GmSolution.rst  pylibmgm.Graph.rst  pylibmgm.LAPSolver.rst  pylibmgm.MgmGenerator.rst  pylibmgm.MgmModel.rst  pylibmgm.MgmSolution.rst  pylibmgm.ParallelGenerator.rst  pylibmgm.QAPSolver.rst  pylibmgm.SequentialGenerator.rst  pylibmgm.SwapLocalSearcher.rst  pylibmgm.build_sync_problem.rst  pylibmgm.omp_set_num_threads.rst
doc/source/pages/api/_autosummary/solver/: pylibmgm.solver.OptimizationLevel.rst  pylibmgm.solver.solve_gm.rst  pylibmgm.solver.solve_mgm.rst  pylibmgm.solver.solve_mgm_pairwise.rst  pylibmgm.solver.solve_mgm_parallel.rst  pylibmgm.solver.synchronize_solution.rst
doc/source/pages/api/overloaded_functions/: save_to_disk.rst
libmgm/: cliques.cpp  cliques.hpp  datastructures.cpp  datastructures.hpp  dd_parser.cpp  dd_parser.hpp  logger.hpp  main.cpp  multigraph.cpp  multigraph.hpp  qap_interface.cpp  qap_interface.hpp  solution.cpp  solution.hpp  solver_mgm.cpp  solver_mgm.hpp
mgm/: argparser.cpp  argparser.hpp  main.cpp  runner.cpp  runner.hpp
mgm_python/: __init__.py  libmgm_io_python.cpp  libmgm_python.cpp  logging_adapter.cpp  logging_adapter.hpp  solver.py
mgm_python/stubs/pylibmgm/: __init__.pyi  io.pyi  solver.pyi
subprojects/: cereal.wrap  libmpopt.wrap  libqpbo.wrap  scipy_lsap.wrap  unordered_dense.wrap
subprojects/libmgm/: meson.build
subprojects/libmgm/libmgm/: mgm.hpp
subprojects/libmgm/libmgm/details/: argparser.hpp  cliques.cpp  cliques.hpp  costs.cpp  costs.hpp  dd_parser.cpp  io_utils.cpp  io_utils.hpp  lap_interface.cpp  lap_interface.hpp  logger.cpp  logger.hpp  multigraph.cpp  multigraph.hpp  qap_interface.cpp  qap_interface.hpp  random_singleton.hpp  solution.cpp  solution.hpp  solver_ab_swap.cpp  solver_ab_swap.hpp  solver_generator_incremental.cpp  solver_generator_incremental.hpp  solver_generator_mgm.cpp  solver_generator_mgm.hpp  solver_incremental.cpp  solver_incremental.hpp  solver_local_search.cpp  solver_local_search.hpp  solver_local_search_GM.cpp  solver_local_search_GM.hpp  solver_local_search_swap.cpp  solver_local_search_swap.hpp  solver_mgm.cpp  solver_mgm.hpp  synchronization.cpp  synchronization.hpp
test_models/: hotel_instance_1_nNodes_10_nGraphs_4.txt
tests/: conftest.py  house_instance_1_nNodes_10_nGraphs_8.txt  opengm1.dd  synthetic_complete_instance_1_nNodes_10_nGraphs_4.txt  test_io.py  test_main.py
