[build-system]
build-backend = 'mesonpy'
requires = ['meson-python',
            'mypy']

[tool.meson-python.args]
setup = ['-Dpypackage=true', '-Dbuildtype=release', '-Db_ndebug=true', '-Dpython.install_env=auto']

[project]
name = 'pylibmgm'
version = '0.0.0.a1'
description = 'Utilities for graph and multi-graph matching optimization.'
readme = 'README.md'
authors = [
  {name = 'Sebastian Stricker', email = 'sebastian.stricker@iwr.uni-heidelberg.de'},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]

[project.urls]
publication = "https://arxiv.org/abs/2406.18215"
source = "https://github.com/vislearn/multi-matching-optimization"
