[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['-Dpypackage=true', '-Dbuildtype=release', '-Db_ndebug=true', '-Dpython.install_env=auto']
install = ['--skip-subprojects']

[project]
name = 'pylibmgm'
version = '1.0.0'
description = 'Utilities for graph and multi-graph matching optimization.'
readme = 'README.md'
authors = [
  {name = 'Sebastian Stricker', email = 'sebastian.stricker@iwr.uni-heidelberg.de'},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]

[project.urls]
Documentation = "https://pylibmgm.readthedocs.io/en/latest/"
publication = "https://arxiv.org/abs/2406.18215"
source = "https://github.com/vislearn/multi-matching-optimization"

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* pp* *-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"] # disabled aarch64 (ARM) due to docker platform issue in cibuildwheel.

[tool.cibuildwheel.windows]
archs = ["AMD64"]
